--- a/resume.html
+++ b/resume.html
@@ -28,6 +28,7 @@ Here is a list of projects I have contributed to on github:
 <li><a href="https://github.com/rjbs/dzil.org/contributors">dzil.org</a></li>
 <li><a href="https://github.com/petdance/bobby-tables/contributors">bobby-tables</a></li>
 <li><a href="https://github.com/petdance/htmlparsing/contributors">htmlparsing</a></li>
+<li><a href="https://github.com/Ovid/DB--Color/contributors">DB::Color</a></li>
 </ul>
 
 Here is a list of projects I have contributed to elsewhere:
