--- a/resume.html
+++ b/resume.html
@@ -21,14 +21,15 @@
 Here is a list of projects I have contributed to on github:
 <ul>
 <li><a href="https://github.com/kimmel/apt-mirror-fork">apt-mirror</a></li>
-<li><a href="https://github.com/kimmel/colordiff/contributors">colordiff</a></li>
-<li><a href="https://github.com/pkrumins/perl1line.txt/contributors">perl1line.txt</a></li>
-<li><a href="https://github.com/monsieurvideo/get-flash-videos/contributors">get-flash-videos</a></li>
-<li><a href="https://github.com/sukria/Dancer/contributors">Dancer</a></li>
-<li><a href="https://github.com/rjbs/dzil.org/contributors">dzil.org</a></li>
-<li><a href="https://github.com/petdance/bobby-tables/contributors">bobby-tables</a></li>
-<li><a href="https://github.com/petdance/htmlparsing/contributors">htmlparsing</a></li>
-<li><a href="https://github.com/Ovid/DB--Color/contributors">DB::Color</a></li>
+<li><a href="https://github.com/kimmel/colordiff/graphs/contributors">colordiff</a></li>
+<li><a href="https://github.com/monsieurvideo/get-flash-videos/graphs/contributors">get-flash-videos</a></li>
+<li><a href="https://github.com/pkrumins/perl1line.txt/graphs/contributors">perl1line.txt</a></li>
+<li><a href="https://github.com/sukria/Dancer/graphs/contributors">Dancer</a></li>
+<li><a href="https://github.com/rjbs/dzil.org/graphs/contributors">dzil.org</a></li>
+<li><a href="https://github.com/petdance/bobby-tables/graphs/contributors">bobby-tables</a></li>
+<li><a href="https://github.com/petdance/htmlparsing/graphs/contributors">htmlparsing</a></li>
+<li><a href="https://github.com/Ovid/DB--Color/graphs/contributors">DB::Color</a></li>
+<li><a href="https://github.com/rcaputo/app-pipefilter/graphs/contributors"></a></li>
 </ul>
 
 Here is a list of projects I have contributed to elsewhere:
