Fixed a broken link.

--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@ Here is a list of projects I have contributed to on github:
 <li><a href="https://github.com/petdance/bobby-tables/graphs/contributors">bobby-tables</a></li>
 <li><a href="https://github.com/petdance/htmlparsing/graphs/contributors">htmlparsing</a></li>
 <li><a href="https://github.com/Ovid/DB--Color/graphs/contributors">DB::Color</a></li>
-<li><a href="https://github.com/rcaputo/app-pipefilter/graphs/contributors"></a></li>
+<li><a href="https://github.com/rcaputo/app-pipefilter/graphs/contributors">App::PipeFilter</a></li>
 </ul>
 
 Here is a list of projects I have contributed to elsewhere:
