Linked in 2011 presentation.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </script>
 </head>
 <body>
+2011 Ohio LinuxFest - <a href="2011_ohio_linuxfest_slides/">Advanced Video Production with FOSS</a>
+
 I will be posting my 2012 Ohio Linuxfest slide deck here before the presentation.
 
 </body>
