Fixed broken links.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 </script>
 </head>
 <body>
-2011 Ohio LinuxFest - <a href="2011_ohio_linuxfest_slides/">Advanced Video Production with FOSS</a>
+2011 Ohio LinuxFest Presentation 'Advanced Video Production with FOSS' <a href="https://github.com/kimmel/kimmel.github.com/blob/master/2011_ohio_linuxfest_slides/2011_olf_slides.odp?raw=true">slides in odp</a>, <a href="https://github.com/kimmel/kimmel.github.com/blob/master/2011_ohio_linuxfest_slides/speaker_notes.txt">presentation notes</a><br />
 
-I will be posting my 2012 Ohio Linuxfest slide deck here before the presentation.
+I will be posting my 2012 Ohio Linuxfest slide deck here before the presentation.<br />
+
+2012 Ohio LinuxFest Presentation - slides, notes
 
 </body>
 </html>
