--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='utf-8'>
+<meta charset='utf-8' />
+<meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
+
 <title>My github stuffs!</title>
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-29525689-1']);
   _gaq.push(['_trackPageview']);
@@ -14,7 +15,6 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
 </head>
 <body>
@@ -26,8 +26,7 @@ I will be posting my 2012 Ohio Linuxfest slide deck here before the presentation
 <a href="https://github.com/kimmel/kimmel.github.com/blob/master/2011_ohio_linuxfest_slides/speaker_notes.txt">presentation notes</a>
 </li>
 <li>2011 Columbus Code Camp 
-<a href="">slides</a>
-<a href="">notes</a>
+<a href="https://github.com/kimmel/kimmel.github.com/raw/master/2011_columbus_code_camp_slides/2011_code_camp_columbus.odp">slides in odp</a>
 </li>
 <li>2012 Ohio LinuxFest Presentation - slides, notes</li>
 </ul>
