--- a/resume.html
+++ b/resume.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
 <title>Open Source Projects</title>
 <script type="text/javascript">
-
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-29525689-1']);
   _gaq.push(['_trackPageview']);
@@ -14,27 +14,32 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
-
 </script>
 </head>
 <body>
 Here is a list of projects I have contributed to on github:
 <ul>
 <li><a href="https://github.com/kimmel/apt-mirror-fork">apt-mirror</a></li>
-<li><a href="https://github.com/kimmel/colordiff/graphs/contributors">colordiff</a></li>
-<li><a href="https://github.com/monsieurvideo/get-flash-videos/graphs/contributors">get-flash-videos</a></li>
-<li><a href="https://github.com/pkrumins/perl1line.txt/graphs/contributors">perl1line.txt</a></li>
-<li><a href="https://github.com/sukria/Dancer/graphs/contributors">Dancer</a></li>
-<li><a href="https://github.com/rjbs/dzil.org/graphs/contributors">dzil.org</a></li>
-<li><a href="https://github.com/petdance/bobby-tables/graphs/contributors">bobby-tables</a></li>
-<li><a href="https://github.com/petdance/htmlparsing/graphs/contributors">htmlparsing</a></li>
-<li><a href="https://github.com/Ovid/DB--Color/graphs/contributors">DB::Color</a></li>
-<li><a href="https://github.com/rcaputo/app-pipefilter/graphs/contributors">App::PipeFilter</a></li>
+<li><a href="https://github.com/kimmel/colordiff/">colordiff</a></li>
+<li><a href="https://github.com/monsieurvideo/get-flash-videos/">get-flash-videos</a></li>
+<li><a href="https://github.com/pkrumins/perl1line.txt/">perl1line.txt</a></li>
+<li><a href="https://github.com/sukria/Dancer/">Dancer</a></li>
+<li><a href="https://github.com/rjbs/dzil.org/">dzil.org</a></li>
+<li><a href="https://github.com/petdance/bobby-tables/">bobby-tables</a></li>
+<li><a href="https://github.com/petdance/htmlparsing/">htmlparsing</a></li>
+<li><a href="https://github.com/Ovid/DB--Color/">DB::Color</a></li>
+<li><a href="https://github.com/rcaputo/app-pipefilter/">App::PipeFilter</a></li>
+<li><a href="https://github.com/kimmel/perlmonks-redesign/">Perlmonks Redesign</a></li>
+<li><a href="https://github.com/isobar-idev/code-standards/">Front-end Code Standards & Best Practices</a></li>
+<li><a href="https://github.com/Munawwar/SHJS-Extended/">SHJS - Syntax Highlighting in JavaScript</a></li>
+<li><a href="https://github.com/isagalaev/highlight.js/">Highlight.js highlights syntax in code examples on blogs, forums and in fact on any web pages.</a></li>
 </ul>
 
 Here is a list of projects I have contributed to elsewhere:
 <ul>
-<li><a href="https://metacpan.org/source/KIMRYAN/Lingua-EN-Fathom-1.15/Changes">Lingua::EN::Fathom</a></li>
+<li><a href="https://metacpan.org/module/Lingua::EN::Fathom">Lingua::EN::Fathom</a></li>
+<li><a href="http://drupal.org/">Drupal</a></li>
+<li><a href="http://cpantesters.org/">cpantesters.org</a></li>
 <li><a href=""></a></li>
 </ul>
 </body>
