Added contact info.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </script>
 </head>
 <body>
-I will be posting my 2012 Ohio Linuxfest slide deck here before the presentation.<br />
 
+<h2>Presentations</h2>
 <ul>
 <li>2011 Ohio LinuxFest Presentation 'Advanced Video Production with FOSS' 
 <a href="https://github.com/kimmel/kimmel.github.com/blob/master/2011_ohio_linuxfest_slides/2011_olf_slides.odp?raw=true">slides in odp</a>, 
@@ -28,8 +28,12 @@ I will be posting my 2012 Ohio Linuxfest slide deck here before the presentation
 <li>2011 Columbus Code Camp 
 <a href="https://github.com/kimmel/kimmel.github.com/raw/master/2011_columbus_code_camp_slides/2011_code_camp_columbus.odp">slides in odp</a>
 </li>
-<li>2012 Ohio LinuxFest Presentation - slides, notes</li>
+<li>2012 Ohio LinuxFest Presentation - slides, notes<br />
+I gave the presentation today. I am typing up my notes and packaging all the code. It will be posted on Monday.</li>
 </ul>
 
+<h2>Contact</h2>
+twitter - <a href="https://twitter.com/KirkKimmel">@KirkKimmel</a><br />
+email - kimmel@cpan.org<br />
 </body>
 </html>
